--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US.utf8">
 <head>
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0"/>
+<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes"/>
 <meta name='robots' content='noindex, nofollow, max-image-preview:large, max-snippet:-1, max-video-preview:-1' />
 <!-- This site is optimized with ... -->
 <title>Tenafly NJ Petition For Prosection Of Borough Code Enforcement Officer and All (Et Al)</title>
@@ -63,7 +63,8 @@ New Jersey
   <div class="nav-inner">
     <div class="logo">
       <a href="#home" aria-label="Go to Home">
-        <img src="eleanor-logo1-050725.jpg" alt="Eleanor of Tenafly NJ">
+        <!-- HC - Nav logo src uses site-hosted image for consistency -->
+        <img src="http://eleanoroftenaflynj.com/eleanor-logo-bernhard-000033-121625.jpg" alt="Eleanor of Tenafly NJ">
       </a>
     </div>
     <button class="hamburger" aria-label="Toggle menu" aria-expanded="false" type="button">
@@ -75,13 +76,23 @@ New Jersey
       <!-- Menu links -->
       <li><a href="#home"><span class="nav-label">Home</span></a></li>
       <li class="has-sub">
-        <a href="#petitions"><span class="nav-label">Petitions</span><span class="nav-caret" aria-hidden="true">▾</span><span class="nav-plus" aria-hidden="true">+</span></a>
+        <a href="#prosecution"><span class="nav-label">Petition To Prosecute</span><span class="nav-caret" aria-hidden="true">▾</span><span class="nav-plus" aria-hidden="true">+</span></a>
         <ul class="nav-sub">
-          <li><a href="petitions.html#official1"><span class="nav-label">Tenafly Borough Official #1</span></a></li>
-          <li><a href="petitions.html#official2"><span class="nav-label">Tenafly Borough Official #2</span></a></li>
-          <li><a href="petitions.html#official3"><span class="nav-label">Tenafly Borough Official #3</span></a></li>
+          <!-- HC - Use updated label in Petition To Prosecute submenu -->
+          <li><a href="boroughofficials.html"><span class="nav-label">The People</span></a></li>
+          <!--<li><a href="petitions.html#official2"><span class="nav-label">Tenafly Borough Official #2</span></a></li> -->
+          <!--<li><a href="petitions.html#official3"><span class="nav-label">Tenafly Borough Official #3</span></a></li> -->
         </ul>
       </li>
+      <li class="has-sub">
+        <a href="#legislation"><span class="nav-label">Petition for Legislation</span><span class="nav-caret" aria-hidden="true">▾</span><span class="nav-plus" aria-hidden="true">+</span></a>
+        <ul class="nav-sub">
+          <li><a href="legislation.html"><span class="nav-label">Legislation Page #1</span></a></li>
+          <!--<li><a href="petitions.html#official2"><span class="nav-label">Legislation Page #2</span></a></li> -->
+          <!--<li><a href="petitions.html#official3"><span class="nav-label">Legislation Page #3</span></a></li>> -->
+        </ul>
+      </li>
+
       <li class="has-sub">
         <a href="#obituary"><span class="nav-label">Obituary Info</span><span class="nav-caret" aria-hidden="true">▾</span><span class="nav-plus" aria-hidden="true">+</span></a>
         <ul class="nav-sub">
@@ -90,8 +101,7 @@ New Jersey
           <li><a href="publishedobituary.html">Published Obituary</a></li>
         </ul>
       </li>
-      <li><a href="#donations"><span class="nav-label">Donations</span></a></li>
-      <li><a href="#contact"><span class="nav-label">Contact</span></a></li>
+<li><a href="#contact"><span class="nav-label">Contact</span></a></li>
     </ul>
   </div>
 </nav>
@@ -236,8 +246,6 @@ New Jersey
 <td width="94%" align=center valign=top>
 <!--  -->
 <br>
-<br>
-<br>
 <!-- table for rule -->
 <TABLE width=100% border=0 cellspacing="0" cellpadding="0" align="center" valign="top" bgcolor="#000000">
 <tr>
@@ -251,7 +259,6 @@ New Jersey
 </Table>
 <!-- end table for rule -->
 <br>
-<br>
 <span class=homepgparatop>Please Join Us!</span>
 <br>
 <span class=homepgparatop>In Our Movement</span>
@@ -259,7 +266,7 @@ New Jersey
 <span class=homepgparatop>Against</span>
 <br>
 <span class=homepgparatop>The Borough Of Tenafly</span><br>
-<br>
+
 &nbsp;
 </span>
 
@@ -277,6 +284,7 @@ New Jersey
 <!-- end table for rule -->
 
 <span class="homelandneed"></span><br>
+<span class="homelandasterisk">*</span>
 <br>
 <span class="homelandneed">&nbsp;Petition</span>
 <br>
@@ -286,7 +294,7 @@ New Jersey
 &nbsp;
 <span class="homelandneed">Prosecute!</span><br>
 <br>
-&nbsp;
+<span class="homelandasterisk">*</span>
 
 <!-- table for rule -->
 <TABLE width=100% border=0 cellspacing="0" cellpadding="0" align="center" valign="top" bgcolor="#000000">
@@ -367,12 +375,14 @@ They operate under a veil of immunity!<br>
 </Table>
 <!-- end table for rule -->
 
-<span class="homelandneed"></span><br>
+<span class="homelandasterisk">*</span>
 <br>
 <span class="homelandneed">
 Join us!<br>
 and<br>
-Sign A Petition!<br>
+Sign the Petition!<br>
+<br>
+<span class="homelandasterisk">*</span>
 <br>
 <br>
 </span>
@@ -494,6 +504,7 @@ Sign A Petition!<br>
 <!-- Begin About row -->
 <!--<a name=aboutlink></a>-->
 
+<!--
 <TR>
 <TD width="100%" ALIGN=Center valign=Top>
 <FONT class=eleanorobittitle>OBITUARY</Font><FONT class=obitraisedtype>&nbsp;*</Font><br>
@@ -527,6 +538,7 @@ Guardian went to pay property tax which was not accepted resulting in another fi
 Thanks to all nurses and doctors who may have tended to mother during her life. Funeral mass for the lady: 5/17 (Sat), 10:30am. Our Lady of Mount Carmel Church, 10 County Rd, Tenafly, NJ.<br>
 <br>
 </FONT>
+-->
 </TD>
 </TR>
 <!-- End About row -->
@@ -536,11 +548,13 @@ Thanks to all nurses and doctors who may have tended to mother during her life. 
 <!-- Begin Petition info row -->
 <TR background-color: #999999>
 <TD>
+<!--
 <FONT class=tenafly000099AVHSnonbold12>
 <br>
 <FONT class=obitraisedtype>&nbsp;*</Font>&nbsp;Note: The above obituary was not fully published by The Bergen Record newspaper or online at Northjersey.com website. Instead  the paragraphs regarding the abuses by the Borough Of Tenafly were removed. This may be in violation of the rules of free speech.<br>
 <br>
 </FONT>
+-->
 </TD>
 </TR>
 <!-- End Petition info row  -->
@@ -609,7 +623,7 @@ Evidence documentation: Coming Soon!<br>
 
 <!-- New table -->
 <!-- Begin Outer Table for 5 Cells Inner -->
-<TABLE bgcolor=#FFFFFF>
+<TABLE class=fillerbelowwhitebox>
 <TR>
 <TD ALIGN=Center Valign=middle>
 <div class=5colempty>
@@ -661,7 +675,7 @@ Evidence documentation: Coming Soon!<br>
 <font class=tenafly000099AVHSnonbold12>&nbsp;---------------------------------------------------------------------------------------------------------------------------<br>
 </font>
 -->
-&nbsp;
+<!--&nbsp;-->
 </td>
 
 <!-- Space Between Column  -->
@@ -688,16 +702,15 @@ Evidence documentation: Coming Soon!<br>
 </font>
 </td>
 
-<!-- Space Between Column
+<!-- Space Between Column -->
 <td align=center valign=top width="3%">&nbsp;
 </td>
- -->
+
 <!-- Second Column of text -->
      <td width="71%" valign=top>
-<!-- -->
 
 </td>
-
+<!-- -->
 <td align=left valign=top width="3%" nowrap>
 <!--
 <a href="#TopOfPg" title="top of page" onmouseover="window.status='top of page'; return true" onmouseout="window.status=''; return true"><font size:12px face="Arial,Helvetica, sans-serif" color="#333333">Unused top ^&nbsp;</font></a>
@@ -790,7 +803,11 @@ Evidence documentation: Coming Soon!<br>
 <!-- End Obituary Landing Table -->
 <!-- End Obituary To Action -->
 
+<!-- Bottom Block Bar Begin -->
+<!-- Copy of Responsive navigation bar -->
 
+<!-- Responsive Footer Bar -->
+<!-- Bottom Block Bar End -->
 
 </Center>
 <!-- -->
@@ -798,209 +815,23 @@ Evidence documentation: Coming Soon!<br>
 </div>
 <!-- -->
 
-<script>
-// Toggle slide-in menu and hamburger → X
-// Key elements for the toggle
-const hamburger = document.querySelector('.hamburger');
-const navLinks = document.querySelector('.nav-links');
-const links = navLinks ? navLinks.querySelectorAll('a') : [];
-const plusButtons = navLinks ? navLinks.querySelectorAll('.nav-plus') : [];
-const innerPlusButtons = navLinks ? navLinks.querySelectorAll('.nav-sub .nav-plus') : [];
-const hoverSubs = navLinks ? navLinks.querySelectorAll('.has-sub') : [];
-const hoverTimers = new WeakMap();
-const desktopMedia = window.matchMedia('(min-width: 1025px)');
-const mobileMedia = window.matchMedia('(max-width: 1024px)');
-// HC - Mobile submenu height controller to avoid lingering open panels
-const setMobileSubState = (item, isOpen) => {
-  if (!item) return;
-  const sub = item.querySelector(':scope > .nav-sub');
-  if (!sub) return;
-  sub.style.maxHeight = isOpen ? `${sub.scrollHeight}px` : '0px';
-  sub.style.opacity = isOpen ? '1' : '0';
-  sub.style.visibility = isOpen ? 'visible' : 'hidden';
-  sub.style.pointerEvents = isOpen ? 'auto' : 'none';
-};
+<!-- HC - Use shared navigation behavior from nav.js -->
+<script src="nav.js"></script>
 
-// Prevent link handler firing on the same tap as open
-let menuOpenedAt = 0;
-
-// Explicit close helper (used on resize)
-const closeMenu = () => {
-  const wasActive = navLinks.classList.contains('active');
-  if (wasActive) {
-    navLinks.classList.add('closing');
-  } else {
-    navLinks.classList.remove('closing');
-  }
-  navLinks.classList.remove('active');
-  hamburger.classList.remove('active');
-  hamburger.setAttribute('aria-expanded', 'false');
-  // Reset any expanded mobile submenus
-  document.querySelectorAll('.has-sub.open').forEach((item) => {
-    item.classList.remove('open');
-  });
-  document.querySelectorAll('.has-sub.mobile-open').forEach((item) => {
-    item.classList.remove('mobile-open');
-    setMobileSubState(item, false);
-  });
-  // HC - Clear any inline states on submenus when the menu closes
-  document.querySelectorAll('.nav-sub').forEach((sub) => {
-    sub.style.maxHeight = '';
-    sub.style.opacity = '';
-    sub.style.visibility = '';
-    sub.style.pointerEvents = '';
-  });
-  // Let the closing animation play, then fully reset if we were open
-  if (wasActive) {
-    setTimeout(() => navLinks.classList.remove('closing'), 320);
-  }
-};
-
-// Underline the link for the current section/hash
-const setActiveLink = () => {
-  const currentHash = window.location.hash || '#home';
-  links.forEach((link) => {
-    const href = link.getAttribute('href');
-    const isActive = href === currentHash || (!window.location.hash && href === '#home');
-    link.classList.toggle('active', isActive);
-  });
-};
-
-const toggleMenu = () => {
-  const isOpen = navLinks.classList.contains('active');
-  if (isOpen) {
-    closeMenu();
-    return;
-  }
-  navLinks.classList.add('active');
-  hamburger.classList.add('active');
-  hamburger.setAttribute('aria-expanded', 'true');
-  menuOpenedAt = Date.now();
-  setActiveLink();
-};
-
-hamburger.addEventListener('click', toggleMenu);
-links.forEach((link) => {
-  link.addEventListener('click', () => {
-    const justOpened = Date.now() - menuOpenedAt < 350;
-    if (navLinks.classList.contains('active') && !justOpened) {
-      toggleMenu();
-    }
-    setActiveLink();
-  });
-});
-
-// Close the menu whenever the viewport is resized (prevents flicker on breakpoint changes)
-window.addEventListener('resize', () => {
-  closeMenu();
-  // Clear any open mobile submenus on resize to avoid sticky states
-  document.querySelectorAll('.has-sub.open').forEach((item) => {
-    item.classList.remove('open');
-  });
-});
-
-desktopMedia.addEventListener('change', (e) => {
-  if (e.matches) {
-    // HC - Ensure mobile-only open states are cleared when entering desktop
-    closeMenu();
-  }
-});
-mobileMedia.addEventListener('change', (e) => {
-  if (!e.matches) {
-    // HC - Clear mobile submenu states when leaving mobile
-    document.querySelectorAll('.has-sub.mobile-open, .has-sub.open').forEach((item) => {
-      item.classList.remove('mobile-open', 'open');
-      setMobileSubState(item, false);
-    });
-  }
-});
-
-// Keep active state in sync when hash changes (e.g., back/forward buttons)
-window.addEventListener('hashchange', setActiveLink);
-
-// Initial active state on load
-setActiveLink();
-
-// Toggle mobile submenus when plus icons are clicked
-plusButtons.forEach((btn) => {
-  btn.addEventListener('click', (e) => {
-    e.preventDefault();
-    e.stopPropagation();
-    if (!mobileMedia.matches || !navLinks.classList.contains('active')) return;
-    const parent = btn.closest('.has-sub');
-    if (parent) {
-      const willOpen = !parent.classList.contains('mobile-open');
-      parent.classList.toggle('mobile-open', willOpen);
-      setMobileSubState(parent, willOpen);
-    }
-  });
-});
-
-// Toggle inner submenus when plus icons are clicked (e.g., Official #1 evidence)
-innerPlusButtons.forEach((btn) => {
-  btn.addEventListener('click', (e) => {
-    e.preventDefault();
-    e.stopPropagation();
-    if (!mobileMedia.matches || !navLinks.classList.contains('active')) return;
-    const parent = btn.closest('.has-sub');
-    if (parent) {
-      const willOpen = !parent.classList.contains('mobile-open');
-      parent.classList.toggle('mobile-open', willOpen);
-      setMobileSubState(parent, willOpen);
-    }
-  });
-});
-
-// Close the mobile menu when clicking outside it or the hamburger
-document.addEventListener('click', (e) => {
-  const isClickInside = navLinks.contains(e.target) || hamburger.contains(e.target);
-  if (!isClickInside && navLinks.classList.contains('active')) {
-    closeMenu();
-  }
-});
-
-// HC - Desktop hover: open on parent hover, close when leaving parent and submenu; close others immediately
-hoverSubs.forEach((item) => {
-  const sub = item.querySelector(':scope > .nav-sub');
-
-  const clearHoverTimer = () => {
-    const t = hoverTimers.get(item);
-    if (t) clearTimeout(t);
-  };
-  const closeHover = () => {
-    clearHoverTimer();
-    item.classList.remove('hover-open');
-  };
-  const closeHoverDelayed = () => {
-    clearHoverTimer();
-    const t = setTimeout(() => closeHover(), 1000);
-    hoverTimers.set(item, t);
-  };
-
-  item.addEventListener('mouseenter', () => {
-    clearHoverTimer();
-    hoverSubs.forEach((other) => {
-      if (other !== item) other.classList.remove('hover-open');
-    });
-    item.classList.add('hover-open');
-  });
-
-  item.addEventListener('mouseleave', (e) => {
-    if (sub && sub.contains(e.relatedTarget)) return;
-    closeHoverDelayed();
-  });
-
-  if (sub) {
-    sub.addEventListener('mouseenter', () => {
-      clearHoverTimer();
-    });
-    sub.addEventListener('mouseleave', (e) => {
-      if (item.contains(e.relatedTarget)) return;
-      closeHoverDelayed();
-    });
-  }
-});
-</script>
-
+<!-- Footer navigation -->
+<nav class="footer-nav" aria-label="Footer navigation">
+  <div class="foot-nav-inner">
+    <div class="footer-brand">
+      <span class="footer-title">Eleanor of Tenafly NJ</span>
+          </div>
+    <ul class="nav-links">
+      <li><a href="index.html"><span class="nav-label">Home</span></a></li>
+      <li><a href="boroughofficials.html"><span class="nav-label">Petition To Prosecute</span></a></li>
+      <li><a href="legislation.html"><span class="nav-label">Petition for Legislation</span></a></li>
+      <li><a href="rejectedobituary.html"><span class="nav-label">Obituary Info</span></a></li>
+<li><a href="#contact"><span class="nav-label">Contact</span></a></li>
+    </ul>
+  </div>
+</nav>
 </BODY>
 </HTML>
