--- a/evidence-06-16-2023.html
+++ b/evidence-06-16-2023.html
@@ -35,6 +35,52 @@ New Jersey
 <!-- TEXT="#333333" -->
 
 <BODY bgcolor="FFFFFF"  align-items: center; justify-content: center;>
+<nav class="site-nav" aria-label="Main navigation">
+  <div class="nav-inner">
+    <div class="logo">
+      <a href="index.html" aria-label="Go to Home">
+        <!-- HC - Nav logo src uses site-hosted image for consistency -->
+        <img src="http://eleanoroftenaflynj.com/eleanor-logo-bernhard-000033-121625.jpg" alt="Eleanor of Tenafly NJ">
+      </a>
+    </div>
+    <button class="hamburger" aria-label="Toggle menu" aria-expanded="false" type="button">
+      <span></span>
+      <span></span>
+      <span></span>
+    </button>
+    <ul class="nav-links">
+      <!-- Menu links -->
+      <li><a href="index.html"><span class="nav-label">Home</span></a></li>
+      <li class="has-sub">
+        <a href="#prosecution"><span class="nav-label">Petition To Prosecute</span><span class="nav-caret" aria-hidden="true">▾</span><span class="nav-plus" aria-hidden="true">+</span></a>
+        <ul class="nav-sub">
+          <!-- HC - Use updated label in Petition To Prosecute submenu -->
+          <li><a href="boroughofficials.html"><span class="nav-label">The People</span></a></li>
+          <!--<li><a href="petitions.html#official2"><span class="nav-label">Tenafly Borough Official #2</span></a></li> -->
+          <!--<li><a href="petitions.html#official3"><span class="nav-label">Tenafly Borough Official #3</span></a></li> -->
+        </ul>
+      </li>
+      <li class="has-sub">
+        <a href="#legislation"><span class="nav-label">Petition for Legislation</span><span class="nav-caret" aria-hidden="true">▾</span><span class="nav-plus" aria-hidden="true">+</span></a>
+        <ul class="nav-sub">
+          <li><a href="legislation.html"><span class="nav-label">Legislation Page #1</span></a></li>
+          <!--<li><a href="petitions.html#official2"><span class="nav-label">Legislation Page #2</span></a></li> -->
+          <!--<li><a href="petitions.html#official3"><span class="nav-label">Legislation Page #3</span></a></li>> -->
+        </ul>
+      </li>
+
+      <li class="has-sub">
+        <a href="#obituary"><span class="nav-label">Obituary Info</span><span class="nav-caret" aria-hidden="true">▾</span><span class="nav-plus" aria-hidden="true">+</span></a>
+        <ul class="nav-sub">
+          <li><a href="rejectedobituary.html">Rejected Obituary</a></li>
+          <li><a href="rejectionbypublisher.html">Publisher Rejection Letter</a></li>
+          <li><a href="publishedobituary.html">Published Obituary</a></li>
+        </ul>
+      </li>
+<li><a href="#contact"><span class="nav-label">Contact</span></a></li>
+    </ul>
+  </div>
+</nav>
 <a name=TopOfPg></a>
 <!-- TEXT="#0066FF" vLink="#0066FF" aLink="#0000ff" link="#FF9933"-->
 <!-- was text="#0000FF", link="#666666"; vlink="#666666"; alink="#0000CC" -->
@@ -57,87 +103,10 @@ New Jersey
 </td>
 </tr>
 </Table>
-
-
-<div class="header-block">
-<div class="logo-row">
-<IMG src="eleanor-logo1-050725.jpg" border=0>
-<FONT class=tenafly000099VAHSbold12>
-</Font>
-<!-- -->
-</div>
-<div class="nav-row">
-<nav id='menu'>
-  <input type='checkbox' id='responsive-menu' onclick='updatemenu()'><label></label>
-  <ul>
-    <li><a href='http://'>Home</a></li>
-    <li><a class='dropdown-arrow' href='http://'>Petitions</a>
-      <ul class='sub-menus'>
-<li><a href='http://petitions.html'>Tenafly Borough Official #1</a></li>
-<li><a href='evidencehome.html'>Evidence Page</a></li>
-<li><a href='evidence-10-4-2023.html'>Sample: 10-4-2023</a></li>
-<!--<li><a href='http://'>Products 4</a></li>-->
-      </ul>
-
-</li>
-
-<li><a class='dropdown-arrow' href='http://'>Obituary Info</a>
-   <ul class='sub-menus'>
-       <li><a href='rejectedobituary.html'>Rejected Obituary</a></li>
-       <li><a href='publisherrejection.html'>Publisher Rejection Letter</a></li>
-       <li><a href='publishedobituary.html'>Published Obituary</a></li>
-   </ul>
-
-</li>
-<!--    <li><a class='dropdown-arrow' href='http://'>Other</a>-->
-<!--      <ul class='sub-menus'>-->
-<!--        <li><a href='#councilmeetingreview'>Mayor Council Meetings Commentary</a></li>-->
-<!--        <li><a href='#tflyboardofedmeeting'>Board Of Education Meetings Commentary</a></li>-->
-<!--        <li><a href='#excessexamples'>Municipal Excess</a></li>-->
-<!--        <li><a href='#contactus'>Contact Us</a></li>-->
-<!--      </ul>-->
-<!--    </li>-->
-<!-- Any more menu items Will not display properly in blue box due: not enough room -->
-<!-- -->
-<!--
-<li><a href='#contactus'>Contact Us</a></li>
-      <ul class='sub-menus'>
-        <li><a href='#contactus'>Contact via #1</a></li>
-      </ul>
-      </li>
--->
-<!--
-    <li><a href='#contactus'>Test Item</a></li>
-      <ul class='sub-menus'>
-        <li><a href='#contactus'>Contact via #1</a></li>
-      </ul>
-  </ul>
--->
-
-</nav>
-
-<!-- function updatemenu() {
-  if (document.getElementById('responsive-menu').checked == true) {
-    document.getElementById('menu').style.borderBottomRightRadius = '0';
-    document.getElementById('menu').style.borderBottomLeftRadius = '0';
-  }else{
-    document.getElementById('menu').style.borderRadius = '10px';
-  }
-} -->
-
-
-<FONT class=tenafly000099VAHSbold12>
-</Font>
-<!-- -->
-
-
-</div>
-</div>
-
 <!-- Image Row Table -->
 <!-- Top Table For Same Page Links -->
 <!--  -->
-<Table class=prodpgtblwidths bgcolor="#FFFFFF" WIDTH="100%" border="0" cellspacing="0" cellpadding="1" align="center" valign="top">
+<Table class=prodpgtblwidths bgcolor="#f5e4ec" WIDTH="100%" border="0" cellspacing="0" cellpadding="1" align="center" valign="top">
 <tr><a name=TopOfPg></a>
 <td height="1" colspan="7"></td></tr>
 
@@ -324,114 +293,28 @@ New Jersey
 </Table>
 <!-- end table for rule -->
 
-<span class="homelandneed"></span><br>
-<br>
-<span class="homelandneed">Petition #1</span>
-<br>
-&nbsp;
-<span class="homelandneed">To</span>
-<br>
-&nbsp;
-<span class="homelandneed">Prosecute </span>
-<br>
-<span class="homelandneed">Borough Code Enforcement Officer</span>
-<br>
-&nbsp;
-
-
-
-<!-- table for rule -->
-<TABLE width=100% border=0 cellspacing="0" cellpadding="0" align="center" valign="top" bgcolor="#000000">
-<tr>
-<td align=center>
-
-<FONT class=tenafly000099VAHSbold12>
-</Font>
-<!-- -->
-</td>
-</tr>
-</Table>
-<!-- end table for rule -->
-</td>
-
-<!-- Space Between Column
-<td align=center valign=top width="3%">&nbsp;
-</td>
- -->
-<!-- Second Column of text -->
-     <td width="71%" valign=top>
-<!--<font class=tenafly000099AVHSnonbold12>&nbsp;-----------------------------------------------------------------------------------------------------------------------------------<br><br>
-</font>-->
-&nbsp;
-</td>
-
-<td align=left valign=top width="3%" nowrap>
-<!-- Removed Go To Top Link -->
-<!--
-<a href="#TopOfPg" title="top of page" onmouseover="window.status='top of page'; return true" onmouseout="window.status=''; return true"><font class=gototoplink>top ^&nbsp;</font></a>
--->
-&nbsp;
-</td>
-
-</tr>
-<!-- End Landing Row -->
-</table>
-<!-- End Landing Table -->
-
-<!-- Begin 2nd Call To Action -->
-<!-- Begin 2nd Landing Table -->
-<table>
-<!-- Begin Landing Row -->
-<tr>
-<td align=left valign=top width="3%">&nbsp;
-<a name=landingtop></a>
-</td>
-
-<td width="94%" align=center valign=top>
-<!--  -->
-<br>
-<span class="homepgparatop">
-The Petitioner seeks The Bergen County Prosecutors Office<br>
-<br>
-And/Or the NJ State Attorney General<br>
-<br>
-to Prosecute<br>
-<br>
-a Borough Code Enforcement Officer<br>
-<br>
-Formerly Employed<br>
-<br>
-by the Borough Of Tenafly, NJ<br>
-<br>
-</span>
-&nbsp;
-<span class="homepgparatop">
-*<br>
-<br>
-</span>
-&nbsp;
-
-<!-- table for rule -->
-<TABLE width=100% border=0 cellspacing="0" cellpadding="0" align="center" valign="top" bgcolor="#000000">
-<tr>
-<td align=center>
-
-<FONT class=tenafly000099VAHSbold12>
-</Font>
-<!-- -->
-</td>
-</tr>
-</Table>
-<!-- end table for rule -->
-
-<span class="homelandneed"></span><br>
-<br>
 <span class="homelandneed">
-Join us!<br>
-and<br>
-Sign A Petition!<br>
-<br>
-<br>
+  <!-- HC - Petition CTA button toggles the form -->
+  <button class="petition-cta" type="button" aria-expanded="false" aria-controls="petition-form">Join us! and Sign the Petition!</button>
+  <div class="petition-form" id="petition-form" hidden>
+    <form class="petition-form-inner" action="#" method="post">
+      <label class="petition-field">
+        <span class="petition-label">Full Name</span>
+        <input type="text" name="full_name" required>
+      </label>
+      <label class="petition-field">
+        <span class="petition-label">Email</span>
+        <input type="email" name="email" required>
+      </label>
+      <label class="petition-field">
+        <span class="petition-label">Message</span>
+        <textarea name="message" rows="4" required></textarea>
+      </label>
+      <button class="petition-submit" type="submit">Submit</button>
+    </form>
+  </div>
+  <br>
+  <br>
 </span>
 </td>
 
@@ -1415,8 +1298,10 @@ Evidence documentation: Coming Soon!<br>
 <nav class="footer-nav" aria-label="Footer navigation">
   <div class="foot-nav-inner">
     <div class="footer-brand">
-      <span class="footer-title">Eleanor of Tenafly NJ</span>
-          </div>
+      <a href="index.html" aria-label="Go to Home">
+        <img class="footer-logo" src="http://eleanoroftenaflynj.com/eleanor-logo-bernhard-000033-121625.jpg" alt="Eleanor of Tenafly NJ">
+      </a>
+    </div>
     <ul class="nav-links">
       <li><a href="index.html"><span class="nav-label">Home</span></a></li>
       <li><a href="boroughofficials.html"><span class="nav-label">Petition To Prosecute</span></a></li>
