--- a/rejectionbypublisher.html
+++ b/rejectionbypublisher.html
@@ -280,114 +280,28 @@ New Jersey
 </Table>
 <!-- end table for rule -->
 
-<span class="homelandneed"></span><br>
-<br>
-<span class="homelandneed">Petition #1</span>
-<br>
-&nbsp;
-<span class="homelandneed">To</span>
-<br>
-&nbsp;
-<span class="homelandneed">Prosecute </span>
-<br>
-<span class="homelandneed">Borough Code Enforcement Officer</span>
-<br>
-&nbsp;
-
-
-
-<!-- table for rule -->
-<TABLE width=100% border=0 cellspacing="0" cellpadding="0" align="center" valign="top" bgcolor="#000000">
-<tr>
-<td align=center>
-
-<FONT class=tenafly000099VAHSbold12>
-</Font>
-<!-- -->
-</td>
-</tr>
-</Table>
-<!-- end table for rule -->
-</td>
-
-<!-- Space Between Column
-<td align=center valign=top width="3%">&nbsp;
-</td>
- -->
-<!-- Second Column of text -->
-     <td width="71%" valign=top>
-<!--<font class=tenafly000099AVHSnonbold12>&nbsp;-----------------------------------------------------------------------------------------------------------------------------------<br><br>
-</font>-->
-&nbsp;
-</td>
-
-<td align=left valign=top width="3%" nowrap>
-<!-- Removed Go To Top Link -->
-<!--
-<a href="#TopOfPg" title="top of page" onmouseover="window.status='top of page'; return true" onmouseout="window.status=''; return true"><font class=gototoplink>top ^&nbsp;</font></a>
--->
-&nbsp;
-</td>
-
-</tr>
-<!-- End Landing Row -->
-</table>
-<!-- End Landing Table -->
-
-<!-- Begin 2nd Call To Action -->
-<!-- Begin 2nd Landing Table -->
-<table>
-<!-- Begin Landing Row -->
-<tr>
-<td align=left valign=top width="3%">&nbsp;
-<a name=landingtop></a>
-</td>
-
-<td width="94%" align=center valign=top>
-<!--  -->
-<br>
-<span class="homepgparatop">
-The Petitioner seeks The Bergen County Prosecutors Office<br>
-<br>
-And/Or the NJ State Attorney General<br>
-<br>
-to Prosecute<br>
-<br>
-a Borough Code Enforcement Officer<br>
-<br>
-Formerly Employed<br>
-<br>
-by the Borough Of Tenafly, NJ<br>
-<br>
-</span>
-&nbsp;
-<span class="homepgparatop">
-*<br>
-<br>
-</span>
-&nbsp;
-
-<!-- table for rule -->
-<TABLE width=100% border=0 cellspacing="0" cellpadding="0" align="center" valign="top" bgcolor="#000000">
-<tr>
-<td align=center>
-
-<FONT class=tenafly000099VAHSbold12>
-</Font>
-<!-- -->
-</td>
-</tr>
-</Table>
-<!-- end table for rule -->
-
-<span class="homelandneed"></span><br>
-<br>
 <span class="homelandneed">
-Join us!<br>
-and<br>
-Sign A Petition!<br>
-<br>
-<br>
+  <!-- HC - Petition CTA button toggles the form -->
+  <button class="petition-cta" type="button" aria-expanded="false" aria-controls="petition-form">Join us! and Sign the Petition!</button>
+  <div class="petition-form" id="petition-form" hidden>
+    <form class="petition-form-inner" action="#" method="post">
+      <label class="petition-field">
+        <span class="petition-label">Full Name</span>
+        <input type="text" name="full_name" required>
+      </label>
+      <label class="petition-field">
+        <span class="petition-label">Email</span>
+        <input type="email" name="email" required>
+      </label>
+      <label class="petition-field">
+        <span class="petition-label">Message</span>
+        <textarea name="message" rows="4" required></textarea>
+      </label>
+      <button class="petition-submit" type="submit">Submit</button>
+    </form>
+  </div>
+  <br>
+  <br>
 </span>
 </td>
 
@@ -1090,8 +1004,10 @@ Evidence documentation: Coming Soon!<br>
 <nav class="footer-nav" aria-label="Footer navigation">
   <div class="foot-nav-inner">
     <div class="footer-brand">
-      <span class="footer-title">Eleanor of Tenafly NJ</span>
-          </div>
+      <a href="index.html" aria-label="Go to Home">
+        <img class="footer-logo" src="http://eleanoroftenaflynj.com/eleanor-logo-bernhard-000033-121625.jpg" alt="Eleanor of Tenafly NJ">
+      </a>
+    </div>
     <ul class="nav-links">
       <li><a href="index.html"><span class="nav-label">Home</span></a></li>
       <li><a href="boroughofficials.html"><span class="nav-label">Petition To Prosecute</span></a></li>
