--- a/evidence-06-05-2023.html
+++ b/evidence-06-05-2023.html
@@ -297,6 +297,8 @@ New Jersey
   <!-- HC - Petition CTA button toggles the form -->
   <button class="petition-cta" type="button" aria-expanded="false" aria-controls="petition-form">Join us! and Sign the Petition!</button>
   <div class="petition-form" id="petition-form" hidden>
+    <button class="petition-close" type="button" aria-label="Close form">×</button>
+    <div class="petition-title">Join Us & Sign the Petition</div>
     <form class="petition-form-inner" action="#" method="post">
       <label class="petition-field">
         <span class="petition-label">Full Name</span>
