--- a/boroughofficials-color-test.html
+++ b/boroughofficials-color-test.html
@@ -29,6 +29,40 @@ New Jersey
   #evidencelink .evidencelinkfont { color: #32de84 !important; }
 </style>
 
+
+
+
+
+<!--  /* Begin Green Colors Test    */  -->
+<!--
+<style>
+.johndoelinkfontgreeninside66FF33 {
+FONT-SIZE: 12px; FONT-WEIGHT: BOLD; FONT-FAMILY: Verdana,Arial,Helvetica,Sans Serif; background COLOR: #66FF33;
+}
+
+johndoelinkfontgreenXXXXXX {
+FONT-SIZE: 12px; FONT-WEIGHT: BOLD; FONT-FAMILY: Verdana,Arial,Helvetica,Sans Serif; COLOR: #000033;
+}
+johndoelinkfontgreenXXXXXX {
+FONT-SIZE: 12px; FONT-WEIGHT: BOLD; FONT-FAMILY: Verdana,Arial,Helvetica,Sans Serif; COLOR: #000033;
+}
+johndoelinkfontgreenXXXXXX {
+FONT-SIZE: 12px; FONT-WEIGHT: BOLD; FONT-FAMILY: Verdana,Arial,Helvetica,Sans Serif; COLOR: #000033;
+}
+johndoelinkfontgreenXXXXXX {
+FONT-SIZE: 12px; FONT-WEIGHT: BOLD; FONT-FAMILY: Verdana,Arial,Helvetica,Sans Serif; COLOR: #000033;
+}
+johndoelinkfontgreenXXXXXX {
+FONT-SIZE: 12px; FONT-WEIGHT: BOLD; FONT-FAMILY: Verdana,Arial,Helvetica,Sans Serif; COLOR: #000033;
+}
+
+</style>
+-->
+
+<!--  /* End Green Colors Test    */  -->
+
+
+
 </head>
 
 
@@ -60,12 +94,7 @@ New Jersey
 <!-- End 1st Filler Table above Logo -->
 
 <!-- Responsive navigation bar -->
-<!-- Begin Navigation Hamburger Menu -->
 <div id="shared-nav"></div>
-
-<!-- End Navigation Hamburger Menu -->
-<!-- -->
-
 
 <!-- Now filler Table -->
 <!-- Old Top Table For Manual Page Links -->
@@ -77,7 +106,7 @@ New Jersey
 </Table>
 <!-- -->
 
-<!-- 2nd Table Below Logo/Navigation -->
+<!-- Table for bottom GoTo -->
 <!--  -->
 <Table class=2ndtablefillbelowlogoandnav border="0" cellspacing="0" cellpadding="1" align="center" valign="top">
 <tr>
@@ -85,7 +114,6 @@ New Jersey
 </td>
 </tr>
 </Table>
-<!-- 2nd Table Below Logo/Navigation -->
 
 <!-- Begin Landing Table -->
 <table>
@@ -207,6 +235,8 @@ New Jersey
 </Font>
 </TD>
 <TD ALIGN=Left Valign=Top Width="3%" nowrap>
+<!--<a href="#TopOfPg" title="top of page" onmouseover="window.status='top of page'; return true" onmouseout="window.status=''; return true"><FONT SIZE="-1" FACE="Arial,Helvetica, sans-serif" COLOR="#0000FF">top ^&nbsp;</Font></a>
+-->
 </TD>
 </TR>
 <!-- End Person & Position Titling Row -->
@@ -270,21 +300,16 @@ New Jersey
 </TD>
 
 <TD width="20%" ALIGN=Left valign=Top>
+<!--
+<FONT class=tenafly000099VAHSbold12>John Doe #1<br>
+</Font>
+ -->
 
-<!-- Link with underline Removed -->
-
-<!-- Link Using Inline Radio Button -->
-<div class="case-text">
-  <div class="case-tags">
+<!-- link with underline -->
+<span nowrap id=evidencelink>
 <a href="johndoe1.html" target="" title="Petition To Prosecute John Doe #1 - Borough Official as Borough Code Enforcement Officer. Former Borough Of Tenafly Employee"  
 onmouseover="window.status='Petition To Prosecute John Doe #1 - Borough Official as Borough Code Enforcement Officer. Former Borough Of Tenafly Employee'; return true" onmouseout="window.status=''; return true">
-<!--<FONT class=evidencelinkfont>John Doe #1</FONT>-->
-<span>John Doe #1</span>
-</a>
-  </div>
-</div>
-<!-- Link Using Inline Radio Button -->
-<br>
+<FONT class=evidencelinkfont>John Doe #1</FONT></a></span><br>
 </TD>
 
 <!-- Space Between Column -->
@@ -292,11 +317,11 @@ onmouseover="window.status='Petition To Prosecute John Doe #1 - Borough Official
 </TD>
 
 <!-- Second Column of text -->
-<!-- ToDo Can't get text to center -->
      <TD Width="71%" valign=top>
-<FONT class=workpositionnonboldsize>
-Borough Code Enforcement Officer #3</Font><br>
+<FONT class=tenafly000099AVHSnonbold12>
+Borough Code Enforcement Officer #3<br>
 <br>
+</Font>
 </TD>
 
 <TD ALIGN=Left Valign=Top Width="3%">
@@ -313,29 +338,17 @@ Borough Code Enforcement Officer #3</Font><br>
 
 <TD width="20%" ALIGN=Left valign=Top>
 <!--
-<FONT class=tenafly000099VAHSbold12>John Doe #2<br>
+<FONT class=tenafly000099VAHSbold12>John Doe #1<br>
 </Font>
  -->
 
 <!-- link with underline -->
-<!--
 <span nowrap id=evidencelink>
 <a href="johndoe2.html" target="" title="Petition To Prosecute John Doe #2 - Borough Official as Associate of The Borough Of Tenafly NJ. Former Borough Of Tenafly Employee"  
 onmouseover="window.status='Petition To Prosecute John Doe #2 - Borough Official as Associate of The Borough Of Tenafly NJ. Former Borough Of Tenafly Employee'; return true" onmouseout="window.status=''; return true">
-<FONT class=evidencelinkfont>John Doe #2</FONT></a></span>
--->
-<!-- Link Using Inline Radio Button -->
-<div class="case-text">
-  <div class="case-tags">
-<a href="johndoe2.html" target="" title="Petition To Prosecute John Doe #2 - Borough Official as Associate of The Borough Of Tenafly NJ. Former Borough Of Tenafly Employee"  
-onmouseover="window.status='Petition To Prosecute John Doe #2 - Borough Official as Associate of The Borough Of Tenafly NJ. Former Borough Of Tenafly Employee'; return true" onmouseout="window.status=''; return true">
-<!--<FONT class=evidencelinkfont>John Doe #2</FONT>-->
-<span>John Doe #2</span>
-</a>
-  </div>
-</div>
-<!-- Link Using Inline Radio Button -->
-<br>
+<FONT class=evidencelinkfont>John Doe #2</FONT></a></span><br>
+<FONT class=tenafly000099VAHSbold12>&nbsp;
+</Font>
 </TD>
 
 <!-- Space Between Column -->
@@ -344,9 +357,10 @@ onmouseover="window.status='Petition To Prosecute John Doe #2 - Borough Official
 
 <!-- Second Column of text -->
      <TD Width="71%" valign=top>
-<FONT class=workpositionnonboldsize>
-Associate of The Borough Of Tenafly NJ</Font><br>
+<FONT class=tenafly000099AVHSnonbold12>
+Associate of The Borough Of Tenafly NJ<br>
 <br>
+</Font>
 </TD>
 
 <TD ALIGN=Left Valign=Top Width="3%">
@@ -357,7 +371,7 @@ Associate of The Borough Of Tenafly NJ</Font><br>
 <!-- End service row -->
 
 
-<!-- Begin Others service row  -->
+<!-- Begin service row  -->
 <TR>
 <TD ALIGN=Left Valign=Top Width="3%">&nbsp;
 </TD>
@@ -388,7 +402,6 @@ Associate of The Borough Of Tenafly NJ</Font><br>
 </TR>
 <!-- End service row -->
 
-
 <!-- Begin service row -->
 <TR>
 <TD ALIGN=Left Valign=Top Width="3%">&nbsp;
@@ -399,26 +412,14 @@ Associate of The Borough Of Tenafly NJ</Font><br>
 <FONT class=tenafly000099VAHSbold12>John Doe #3<br>
 </Font>
  -->
+
 <!-- link with underline -->
-<!--
 <span nowrap id=evidencelink>
 <a href="johndoe3.html" target="" title="Petition To Prosecute John Doe #3 - Borough Official as Associate of The Borough Of Tenafly NJ. Former Borough Of Tenafly Employee"  
 onmouseover="window.status='Petition To Prosecute John Doe #3 - Borough Official as Associate of The Borough Of Tenafly NJ. Former Borough Of Tenafly Employee'; return true" onmouseout="window.status=''; return true">
-<FONT class=evidencelinkfont>John Doe #3</FONT></a></span>
--->
-<!-- Link Using Inline Radio Button -->
-<div class="case-text">
-  <div class="case-tags">
-<a href="johndoe3.html" target="" title="Petition To Prosecute John Doe #3 - Borough Official as Associate of The Borough Of Tenafly NJ. Former Borough Of Tenafly Employee"  
-onmouseover="window.status='Petition To Prosecute John Doe #3 - Borough Official as Associate of The Borough Of Tenafly NJ. Former Borough Of Tenafly Employee'; return true" onmouseout="window.status=''; return true">
-<!--<FONT class=evidencelinkfont>John Doe #3</FONT>-->
-  <span>John Doe #3</span>
-</a>
-  </div>
-</div>
-<!-- Link Using Inline Radio Button -->
-<br>
-
+<FONT class=evidencelinkfont>John Doe #3</FONT></a></span><br>
+<FONT class=tenafly000099VAHSbold12>&nbsp;
+</Font>
 </TD>
 
 <!-- Space Between Column -->
@@ -427,8 +428,8 @@ onmouseover="window.status='Petition To Prosecute John Doe #3 - Borough Official
 
 <!-- Second Column of text -->
      <TD Width="71%" valign=top>
-<FONT class=workpositionnonboldsize>
-Associate of The Borough Of Tenafly NJ</Font><br>
+<FONT class=tenafly000099AVHSnonbold12>
+Associate of The Borough Of Tenafly NJ<br>
 <br>
 </Font>
 </TD>
@@ -442,31 +443,25 @@ Associate of The Borough Of Tenafly NJ</Font><br>
 
 
 
+
+
 <!-- Begin service row  -->
 <TR>
 <TD ALIGN=Left Valign=Top Width="3%">&nbsp;
 </TD>
 
 <TD width="20%" ALIGN=Left valign=Top>
-<!-- link with underline -->
 <!--
+<FONT class=tenafly000099VAHSbold12>John Doe #4<br>
+</Font>
+-->
 <span nowrap id=evidencelink>
 <a href="johndoe4.html" target="" title="Petition To Prosecute John Doe #4 - Borough Official as Borough Code Enforcement Officer. Former Borough Of Tenafly Employee"  
 onmouseover="window.status='Petition To Prosecute John Doe #4 - Borough Official as Borough Code Enforcement Officer. Former Borough Of Tenafly Employee'; return true" onmouseout="window.status=''; return true">
 <FONT class=evidencelinkfont>John Doe #4</FONT></a></span><br>
--->
+<FONT class=tenafly000099VAHSbold12>&nbsp;
+</Font>
 
-<!-- Link Using Inline Radio Button -->
-<div class="case-text">
-  <div class="case-tags">
-<a href="johndoe4.html" target="" title="Petition To Prosecute John Doe #4 - Borough Official as Borough Code Enforcement Officer. Former Borough Of Tenafly Employee"  
-onmouseover="window.status='Petition To Prosecute John Doe #4 - Borough Official as Borough Code Enforcement Officer. Former Borough Of Tenafly Employee'; return true" onmouseout="window.status=''; return true">
-<!--<FONT class=evidencelinkfont>John Doe #4</FONT>-->
-<span>John Doe #4</span>
-</a>
-  </div>
-</div>
-<!-- Link Using Inline Radio Button -->
 </TD>
 
 <!-- Space Between Column -->
@@ -475,8 +470,10 @@ onmouseover="window.status='Petition To Prosecute John Doe #4 - Borough Official
 
 <!-- Second Column of text -->
 <TD Width="71%" valign=top Align: Center>
-<FONT class=workpositionnonboldsize>
-Borough Code Enforcement Officer #2<br>
+<FONT class=tenafly000099AVHSnonbold12>
+<!-- -->
+Borough Code Enforcement Officer #2
+<br>
 <br>
 </Font>
 </TD>
@@ -502,6 +499,210 @@ Borough Code Enforcement Officer #2<br>
 <FONT class=tenafly000099VAHSbold12>
 </Font>
 </TD>
+<!-- Space Between Column -->
+<TD Align=Center Valign=Top Width="3%">&nbsp;
+</TD>
+<!-- Second Column of text -->
+<TD Width="71%" valign=top Align: Center>
+<FONT class=tenafly000099AVHSnonbold12>
+<!--  -->
+<br>
+<br>
+</Font>
+</TD>
+<TD ALIGN=Left Valign=Top Width="3%">
+&nbsp;
+</TD>
+
+</TR>
+<!-- End service row -->
+
+
+<!-- 1st  Rounded Link Test from liveworkstudio.com -->
+<!-- Blank Row -->
+<!-- Begin service row  -->
+<TR>
+<TD ALIGN=Left Valign=Top Width="3%">&nbsp;
+</TD>
+
+<TD width="20%" ALIGN=Left valign=Top NoWrap>
+<!--  -->
+<!-- Case Tag Link Test -->
+<div class="case-text">
+<div class="case-tags">
+<span>John Doe #1</span>
+</div>
+<h3>Blah</h3>
+<p>Blah</p>
+
+<!-- The Link -->
+<a href="https://liveworkstudio.com/case/helping-a-sportswear-giant-become-customer-obsessed/" class="read-more">Read more</a>
+<!-- -->
+
+</div>
+<!-- Case Tag Link Test -->
+
+
+</TD>
+<!-- Space Between Column -->
+<TD Align=Center Valign=Top Width="3%">&nbsp;
+</TD>
+<!-- Second Column of text -->
+<TD Width="71%" valign=top Align: Center>
+<FONT class=tenaflypositionnonboldsize>
+<!--  -->
+Borough Code Enforcement Officer #3
+<br>
+<br>
+</Font>
+</TD>
+<TD ALIGN=Left Valign=Top Width="3%">
+&nbsp;
+</TD>
+
+</TR>
+<!-- End service row -->
+
+
+<!-- 2nd  Rounded Inline Block Test from liveworkstudio.com -->
+<!-- Blank Row -->
+<!-- Begin service row  -->
+<TR>
+<TD ALIGN=Left Valign=Top Width="3%">&nbsp;
+</TD>
+
+<TD width="20%" ALIGN=Left valign=Top NoWrap>
+<!--  -->
+<!-- Case Tag Link Test -->
+<div class="case-text">
+<div class="case-tags">
+<span>John Doe #2</span>
+
+</div>
+<h3>Blah</h3>
+<p>Blah</p>
+
+<!-- The Link -->
+<a href="https://liveworkstudio.com/case/helping-a-sportswear-giant-become-customer-obsessed/" class="read-more">Read more</a>
+<!-- -->
+
+</div>
+<!-- Case Tag Link Test -->
+
+
+</TD>
+<!-- Space Between Column -->
+<TD Align=Center Valign=Top Width="3%">&nbsp;
+</TD>
+<!-- Second Column of text -->
+<TD Width="71%" valign=top Align: Center>
+<FONT class=tenafly000099AVHSnonbold12>
+<!--  -->
+<br>
+<br>
+</Font>
+</TD>
+<TD ALIGN=Left Valign=Top Width="3%">
+&nbsp;
+</TD>
+
+</TR>
+<!-- End service row -->
+
+<!-- Begin Testing Rows -->
+<!--  -->
+<!-- Blank Row -->
+<!-- Begin service row  -->
+<TR>
+<TD ALIGN=Left Valign=Top Width="3%">&nbsp;
+</TD>
+
+<TD width="20%" ALIGN=Left valign=Top>
+<!--  -->
+<!--
+<FONT class=tenafly000099VAHSbold12><br>
+</Font>
+<FONT class=tenafly000099VAHSbold12></Font>
+-->
+<br>
+<br>
+<br>
+<!--
+<a href="https://liveworkstudio.com/case/helping-a-sportswear-giant-become-customer-obsessed/" class="read-more">Read more</a>
+-->
+<span nowrap id=evidencelink>
+<a href="johndoe1.html" target="" title="Petition To Prosecute John Doe #1 - Borough Official as Borough Code Enforcement Officer. Former Borough Of Tenafly Employee"  
+onmouseover="window.status='Petition To Prosecute John Doe #1 - Borough Official as Borough Code Enforcement Officer. Former Borough Of Tenafly Employee'; return true" onmouseout="window.status=''; return true">
+<FONT>John Doe #1</FONT></a></span><br>
+<br>
+
+
+<span nowrap id=johndoelink66FF33>
+<a href="johndoe1.html" target="" title="Petition To Prosecute John Doe #1 - Borough Official as Borough Code Enforcement Officer. Former Borough Of Tenafly Employee"  
+onmouseover="window.status='Petition To Prosecute John Doe #1 - Borough Official as Borough Code Enforcement Officer. Former Borough Of Tenafly Employee'; return true" onmouseout="window.status=''; return true">
+<FONT>John Doe #1</FONT></a></span><br>
+<br>
+
+<span class=johndoelink66FF33>
+<a href="johndoe1.html" target="" title="Petition To Prosecute John Doe #1 - Borough Official as Borough Code Enforcement Officer. Former Borough Of Tenafly Employee"  
+onmouseover="window.status='Petition To Prosecute John Doe #1 - Borough Official as Borough Code Enforcement Officer. Former Borough Of Tenafly Employee'; return true" onmouseout="window.status=''; return true">
+John Doe #1</a></span><br>
+<br>
+
+<!--
+.evidencelink66ff33 {
+FONT-SIZE: 12px; FONT-WEIGHT: BOLD; FONT-FAMILY: Verdana,Arial,Helvetica,Sans Serif; COLOR: #66ff33;
+}
+-->
+
+<FONT class=evidencelink66ff33>John Doe #12</FONT><br>
+<br>
+<span class=evidencelink66ff33>
+<a href="johndoe1.html" target="" title="Petition To Prosecute John Doe #1 - Borough Official as Borough Code Enforcement Officer. Former Borough Of Tenafly Employee"  
+onmouseover="window.status='Petition To Prosecute John Doe #1 - Borough Official as Borough Code Enforcement Officer. Former Borough Of Tenafly Employee'; return true" onmouseout="window.status=''; return true">
+John Doe #1</a></span><br>
+<br>
+
+
+
+<FONT class=johndoelinkfontgreen66FF33>John Doe #13</FONT><br>
+<br>
+<FONT class=johndoelinkfontgreentest66FF33>John Doe #14</FONT><br>
+<br>
+<FONT class=johndoelinkfontgreen66FF33>John Doe #15</FONT><br>
+<br>
+<FONT class=johndoelinkfontgreentest66FF33>John Doe #16</FONT><br>
+<br>
+<FONT class=johndoelinkfontgreen66FF33>John Doe #17</FONT><br>
+<br>
+<FONT class=johndoelinkfontgreentest66FF33>John Doe #18</FONT><br>
+<br>
+<FONT class=johndoelinkfontgreen66FF33>John Doe #19</FONT><br>
+<br>
+<br>
+<a href="https://liveworkstudio.com/case/helping-a-sportswear-giant-become-customer-obsessed/" class="read-more">Read more</a>
+<br>
+<br>
+
+<!-- Case Tag Link Test -->
+<div class="case-text">
+<div class="case-tags">
+<span>Retail</span>
+<span>1</span>
+</div>
+<h3>h3</h3>
+<p>P</p>
+
+<!-- The Link -->
+<a href="https://liveworkstudio.com/case/helping-a-sportswear-giant-become-customer-obsessed/" class="read-more">Read more</a>
+<!-- -->
+
+</div>
+<!-- Case Tag Link Test -->
+
+
+
+</TD>
 
 <!-- Space Between Column -->
 <TD Align=Center Valign=Top Width="3%">&nbsp;
@@ -509,8 +710,26 @@ Borough Code Enforcement Officer #2<br>
 
 <!-- Second Column of text -->
 <TD Width="71%" valign=top Align: Center>
-<FONT class=tenafly000099AVHSnonbold12>
-<!--  -->
+
+<a href="https://liveworkstudio.com/case/helping-a-sportswear-giant-become-customer-obsessed/" class="read-more">Read more</a>
+<br>
+<br>
+
+<!-- Case Tag Link Test -->
+<div class="case-text">
+<div class="case-tags">
+<span>Retail</span>
+<span>Customer Centricity</span>
+</div>
+<h3>h3</h3>
+<p>P</p>
+
+<!-- The Link -->
+<a href="https://liveworkstudio.com/case/helping-a-sportswear-giant-become-customer-obsessed/" class="read-more">Read more</a>
+<!-- -->
+
+</div>
+<!-- Case Tag Link Test -->
 
 <br>
 <br>
@@ -523,6 +742,11 @@ Borough Code Enforcement Officer #2<br>
 
 </TR>
 <!-- End service row -->
+<!-- End Testing Rows -->
+
+
+
+
 
 </TABLE>
 <!-- End  Inner Table for 5 Cells Across -->
@@ -671,6 +895,9 @@ Borough Code Enforcement Officer #2<br>
 
 <!-- Bottom Go To Top Link -->
 <td align=left valign=top width="3%" nowrap>
+<!--
+<a href="#TopOfPg" title="top of page" onmouseover="window.status='top of page'; return true" onmouseout="window.status=''; return true"><font size:12px  face="Arial,Helvetica, sans-serif" color="#333333">top ^&nbsp;</font></a>
+->
 <br>
 </td>
 
