--- a/evidencehome.html
+++ b/evidencehome.html
@@ -35,6 +35,7 @@ New Jersey
 <!-- TEXT="#333333" -->
 
 <BODY bgcolor="FFFFFF"  align-items: center; justify-content: center;>
+<div id="shared-nav"></div>
 <a name=TopOfPg></a>
 <!-- TEXT="#0066FF" vLink="#0066FF" aLink="#0000ff" link="#FF9933"-->
 <!-- was text="#0000FF", link="#666666"; vlink="#666666"; alink="#0000CC" -->
@@ -1925,17 +1926,14 @@ Evidence documentation: Coming Soon!<br>
 
 
 <!-- HC - Use shared navigation behavior from nav.js -->
-<script src="nav.js"></script>
+
 <!-- Footer navigation -->
-<nav class="footer-nav" aria-label="Footer navigation">
-  <div class="foot-nav-inner">
-    <div class="footer-brand">
-      <span class="footer-title">Eleanor of Tenafly NJ</span>
-          </div>
-    <ul class="nav-links">
-      <li><a href="#contact"><span class="nav-label">Contact</span></a></li>
-    </ul>
-  </div>
-</nav>
+
+
+
+
+
+<div id="shared-footer"></div>
+<script src="layout.js"></script>
 </BODY>
 </HTML>
