--- a/indexblocktest3table.html
+++ b/indexblocktest3table.html
@@ -263,7 +263,7 @@ Sign the Petition!<br>
 
 <!-- Box Test from Flintbeat.com -->
 <!-- Begin Table -->
-<Table>
+<Table bgcolor=#666666>
 <!-- Begin 1ST Box Row -->
 <tr>
 <!-- 1st Column -->
@@ -311,7 +311,7 @@ Sign the Petition!<br>
 <td width="94%" align=center valign=top>
 
 <!-- Begin block-call-to-action1 -->
-<div class=block-call-to-action1>
+<div class="block-call-to-action1">
 <style>
   #outer-block-with-shadow3 {
     border: 1px solid #2f6f3e;
@@ -339,14 +339,15 @@ Sign the Petition!<br>
 
 
 <!-- Spacing Div Between Tables Begin -->
-<div class=spacer-fill-between-main-content>
+<!-- <div class=spacer-fill-between-main-content>
 <br>1<br>2<br>3<br>
 </div>
+-->
 <!-- Spacing Div Between Tables End -->
-
-
+<!--
 <br>
 <br>
+-->
 </td>
 
 <!-- 3rd Column -->
