--- a/navigation.html
+++ b/navigation.html
@@ -1,3 +1,5 @@
+<html lang="en-US.utf8">
+<body>
 <nav class="site-nav" aria-label="Main navigation">
   <div class="nav-inner">
     <div class="logo">
@@ -34,7 +36,19 @@
           <li><a href="publishedobituary.html"><span class="nav-label">Published Obituary</span></a></li>
         </ul>
       </li>
-      <li><a href="#contact"><span class="nav-label">Contact</span></a></li>
+
+      <li class="has-sub">
+        <a href="#other"><span class="nav-label">Other</span><span class="nav-caret" aria-hidden="true"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-down-fill" viewBox="0 0 16 16"><path d="M7.247 11.14 2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 0 1 .753 1.659l-4.796 5.48a1 1 0 0 1-1.506 0z"/></svg></span><span class="nav-plus" aria-hidden="true">+</span></a>
+        <ul class="nav-sub">
+          <li><a href="aroundtheworld.html"><span class="nav-label">Around The World</span></a></li>
+          <li><a href=""><span class="nav-label">Contact (Coming Soon!)</span></a></li> <!-- contact.html -->
+          <!-- <li><a href="publishedobituary.html"><span class="nav-label">Published Obituary</span></a></li> -->
+        </ul>
+      </li>
+
+      <!-- <li><a href="#contact"><span class="nav-label">Contact (Coming Soon!)</span></a></li> -->
     </ul>
   </div>
 </nav>
+<body>
+<html>
