--- a/legislation021226.html
+++ b/legislation021226.html
@@ -7,7 +7,6 @@
 <!-- This site is optimized with ... -->
 <title>Eleanor Of Tenafly NJ 07670</title>
 <meta name="description" content="Tenafly NJ Petition Against Government Officials For Negligence. Prosection Of Borough Code Enforcement Officer and All (Et Al)">
-<link rel="canonical" href="http://www.eleanoroftenaflynj.com/">
 <meta property="og:locale" content="en_US">
 <meta property="og:type" content="website">
 <meta property="og:title" content="Tenafly NJ Petition. Prosection Of Borough Code Enforcement Officer and All (Et Al)">
@@ -43,7 +42,10 @@ Code Enforcement Officer
 <!-- <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png?v=190924"> -->
 
 <link rel="stylesheet" type="text/css" href="blocktestfromflintbeat.css">
+
+<link rel="canonical" href="http://www.eleanoroftenaflynj.com/boroughofficials.html">
 </head>
+
 
 
 <!-- Removed from BODY tag: vLink="#003300" aLink="#003300" link="#003300"  -->
@@ -60,12 +62,14 @@ Code Enforcement Officer
 <div class=pgcontainer>
 <!-- -->
 
+
 <!-- Centering Of All Content Except Footer. Begin -->
 <Center>
 <!-- Centering Of All Content Except Footer -->
 
 <!-- Open Header Tag here* Unused as of 2/1/2026 -->
 <!-- <header> -->
+
 
 <!-- Begin Table Top  -->
 <!-- Doesn't Appear Because Empty of &nbsp; -->
@@ -81,6 +85,7 @@ Code Enforcement Officer
 <!-- End Table Top -->
 
 
+
 <!-- Begin Responsive Navigation Bar -->
 <!-- Code is external to this page. Similar to CSS -->
 <!-- Used for Top Down updates throughout site for Navigation Header -->
@@ -89,7 +94,6 @@ Code Enforcement Officer
 
 <!-- End Responsive Navigation Bar -->
 <!-- -->
-
 
 <!-- Close Header Tag here* Unused as of 2/1/2026 -->
 <!-- </header> -->
@@ -125,62 +129,51 @@ Code Enforcement Officer
 
 
 <!-- Begin Landing Table -->
-<!-- Begin 1st Call To Action &nbsp; -->
+<!-- Begin 1st Call To Action -->
 <table>
 <!-- Begin Landing Row -->
 <tr>
+     <!-- 1st Column of 3% -->
 <td align=left valign=top width="3%">&nbsp;
 </td>
 
+     <!-- 2nd Column of 94% -->
 <td width="94%" align=center valign=top>
 <!--  -->
 <br>
 <br>
-<span class=homepgparatop>Please Join Us!</span><br>
-<br>
-<span class=homepgparatop>In Our Movement</span>
-<br>
-<span class=homepgparatop>against</span>
-<br>
-<span class=homepgparatop>The Borough Of Tenafly</span>
+<span class=homepgparatop>Please Support!</span>
 <br>
 <br>
-
+<span class=homepgparatop>Legislation</span><br>
+<br>
+<span class=homepgparatop>for the</span><br>
+<br>
+<span class=homepgparatop>Licensing</span><br>
+<br>
+<span class=homepgparatop>of</span><br>
+<br>
+<span class=homepgparatop>Code Enforcement Officers</span><br>
+<br>
+<span class=homepgparatop>in the field of</span><br>
+<br>
+<span class=homepgparatop>Property Maintenance</span><br>
+<br>
 <!-- table for rule -->
-<!--
-<TABLE width=100% border=0 cellspacing="0" cellpadding="0" align="center" valign="top" bgcolor="#000000">
-<tr>
-<td align=center>
-<FONT class=tenafly000099VAHSbold12>
-</Font>
-</td>
-</tr>
-</Table>
--->
 <!-- end table for rule -->
 
-<span class="homelandneed"></span><br>
-<span class="homelandasterisk">*</span>
-<br>
-<br>
-<span class="homelandneed">&nbsp;Petition</span>
-<br>
-&nbsp;
-<span class="homelandneed">To</span>
-<br>
-&nbsp;
-<span class="homelandneed">Prosecute!</span><br>
-<br>
-<br>
+<span class="homelandneed"></span>
 <span class="homelandasterisk">*</span>
 
 <!-- table for rule -->
 <!-- end table for rule -->
 
+     <!-- End 2nd Column of 94% -->
 </td>
 
-<td align=left valign=top width="3%" nowrap>&nbsp;
-<!-- Removed Go To Top Link -->
+     <!-- 3rd Column of 3% -->
+<td width="3%" align=left valign=top nowrap>
+<!-- -->
 </td>
 
 </tr>
@@ -192,107 +185,211 @@ Code Enforcement Officer
 
 <!-- Begin 2nd Call To Action -->
 <!-- Begin 2nd Landing Table -->
-<table>
+<table class="call-to-action-box-within-tab-le">
 <!-- Begin Landing Row -->
-<tr>
-<td align=left valign=top width="3%" nowrap>&nbsp;
+<tr class="call-to-action-box-within-row">
+<td align=left valign=top width="3%">&nbsp;
 </td>
 
-<td width="94%" align=center valign=top>
+<td class="call-to-action-box-within-tdcell" width="94%" align=center valign=top>
 <!--  -->
-<br>
-<span class="homepgparatop">
-The Borough Of Tenafly<br>
-Abuses its Power<br>
-against its Taxpayers and Residents<br>
-via<br>
-Borough Code Enforcement Officers, Ordinances & Municipal Court system.<br>
-<br>
-Mayors and Council members<br>
-have Violated the Rights<br>
-of its Taxpayers & Citizens.<br>
-<br>
-</span>
-&nbsp;
-<span class="homepgparatop">
-They operate under a veil of immunity!<br>
-<br>
-</span>
+<!-- Span Has shadow that may be causing incorrect cell widths -->
+<!-- I removed and cell with shadow box still not centered correctly -->
+<span>8888-8888</span>
 
-<span class="homelandasterisk">*</span>
-<br>
-<br>
-<span class="homelandneed">
-Join us!<br>
-and<br>
-Sign the Petition!<br>
-<br>
-<span class="homelandasterisk">*</span>
-<br>
-<br>
-</span>
+
+<!-- Begin block-call-to-action1 -->
+  <!--
+  /* display: block; Test by me on 2/11/26 because area not in table */
+  /* position: auto; Test by me on 2/11/26 because area not in table */
+  /* position: absolute; */
+  -->
+
+<div> <!-- NO Class declaration! Just for styling. -->
+  <style>
+  #outer-block-with-shadow3 {
+    border: 1px solid #2f6f3e;
+    row-gap: 1.6em;
+    display: grid;
+    column-gap: 2em;
+}
+  .green-shadow-box {
+    background: #ffffff; 
+    border-radius: 0;
+    padding: 24px 28px;
+    box-shadow: 3px 3px 0 #f5e4ec, 6px 6px 0 #E9A7D6;
+    border: 1px solid #dbeee2;
+  }
+  </style>
+<!-- Box "outer-block-with-shadow3" -->
+<div id="outer-block-with-shadow3" class="green-shadow-box">
+8888-8888<br>
+8888-8888<br>
+</div>
+<!-- Box "outer-block-with-shadow" -->
+</div>
+<!-- End block-call-to-action1 -->
+
 </td>
+
 
 <!-- Space Between Column -->
-<!-- size:12px face="Arial,Helvetica, sans-serif" color="#333333" -->
-<td align=left valign=top width="3%" nowrap>&nbsp;
+<!---->
+<td align=center valign=top width="3%">&nbsp;
 </td>
-
 </tr>
+<tr><td>
+
+</td></tr>
+
 <!-- End Landing Row -->
 </table>
 <!-- End 2nd Landing Table -->
-<!-- End 2nd Call To Action -->
+<!-- End 2nd Call To Action --> <!-- table class = "call-to-action-block-box" -->
 
 
-<!-- -->
-<!-- -->
-</TABLE><!-- -->
-<!-- -->
-<!-- End Master table container -->
-<!-- -->
-<!-- -->
 
 
-<!-- -->
-<!-- Begin Bottom Table Rule Filler Above Bottom URL & GoTo Top Link -->
-<!--
-<table class=tableaboveboturl>
-<tr class=eoftrulerrow>
+<!-- 3rd Call To Action -->
+<!-- Begin 3rd Call To Action -->
+<!-- Begin 3rd Landing Table -->
+<table class="call-to-action-box-within-tab-le">
+<!-- Begin Landing Row -->
+<tr class="call-to-action-box-within-row">
 <td align=left valign=top width="3%">&nbsp;
 </td>
-<td width="94%" align=center valign=top>
+
+<td class="call-to-action-box-within-tdcell" width="94%" align=center valign=top>
+<!--  -->
+<!-- Span Has shadow that may be causing incorrect cell widths -->
+<!-- I removed and cell with shadow box still not centered correctly -->
+<span>8888-8888</span>
+
+
+<!-- Begin block-call-to-action1 -->
+  <!--
+  /* display: block; Test by me on 2/11/26 because area not in table */
+  /* position: auto; Test by me on 2/11/26 because area not in table */
+  /* position: absolute; */
+  -->
+
+<div> <!-- NO Class declaration! Just for styling. -->
+  <style>
+  #outer-block-with-shadow3 {
+    border: 1px solid #2f6f3e;
+    row-gap: 1.6em;
+    display: grid;
+    column-gap: 2em;
+}
+  .green-shadow-box {
+    background: #ffffff; 
+    border-radius: 0;
+    padding: 24px 28px;
+    box-shadow: 3px 3px 0 #f5e4ec, 6px 6px 0 #E9A7D6;
+    border: 1px solid #dbeee2;
+  }
+  </style>
+<!-- Box "outer-block-with-shadow3" -->
+<div id="outer-block-with-shadow3" class="green-shadow-box">
+8888-8888<br>
+8888-8888<br>
+
+<!-- <div class="leg-paragraph"> -->
+<div>
+<p class="leg-paragraph-left">
+The only way to prevent such unlawful behavior by a code enforcement officer within a municipality / borough / town within the State of New Jersey is to have the official licensed and/or regulated. Our research shows that this type of official position as a code enforcement officer requires little or no training. We ask that you contact your government officials within your Legislative District, County & the State of New Jersey.<br>
+<br>
+</p>
+</div>
+<div>
+<p class="leg-paragraph-center">
+These legislative positions are known as:<br>
+<br>
+Assemblyman (woman)<br>
+Senators<br>
+County Executives<br>
+<br>
+Follow the link:<br>
+<br>
+</p>
+</div>
+
+
+
+<!-- Link Using Inline Radio Button -->
+<div class="case-text">
+  <div class="case-tags">
+<!-- href="legislativecontacts.html" -->
+<a href="legislativecontacts.html" target="" title="Petition To Prosecute John Doe #1 - Borough Official as Borough Code Enforcement Officer. Former Borough Of Tenafly Employee"  
+onmouseover="window.status='Petition To Prosecute John Doe #1 - Borough Official as Borough Code Enforcement Officer. Former Borough Of Tenafly Employee'; return true" onmouseout="window.status=''; return true">
+<!--<FONT class=evidencelinkfont>Legislative Contacts</FONT>-->
+<span>Coming Soon</span>
+</a>
+  </div>
+</div>
+<!-- Link Using Inline Radio Button -->
+<br>
+<!-- Link Using Inline Radio Button -->
+<div class="case-text">
+  <div class="legislative-link">
+<!-- href="legislativecontacts.html" -->
+<a href="legislativecontacts.html" target="" title="Petition To Prosecute John Doe #1 - Borough Official as Borough Code Enforcement Officer. Former Borough Of Tenafly Employee"  
+onmouseover="window.status='Petition To Prosecute John Doe #1 - Borough Official as Borough Code Enforcement Officer. Former Borough Of Tenafly Employee'; return true" onmouseout="window.status=''; return true">
+<!--<FONT class=evidencelinkfont>Legislative Contacts</FONT>-->
+<span>Coming Soon</span>
+</a>
+  </div>
+</div>
+<!-- Link Using Inline Radio Button -->
+<br>
+
+
+
+
+
+
+</div>
+<!-- Box "outer-block-with-shadow" -->
+</div>
+<!-- End block-call-to-action1 -->
+
 </td>
+
+
+<!-- Space Between Column -->
+<!---->
 <td align=center valign=top width="3%">&nbsp;
 </td>
 </tr>
+<tr><td>
+
+</td></tr>
+
+<!-- End Landing Row -->
 </table>
--->
-<!-- End Bottom Table Rule Filler Above Bottom URL & GoTo Top Link -->
+<!-- End Landing Table -->
+<!-- End Call To Action --> <!-- table class = "call-to-action-block-box" -->
+<!-- 3rd Call To Action -->
 
 
-<!-- Begin Bottom 1st Filler Table Above Bottom Links & Copyright -->
-<table class=tableaboveboturl>
-<!-- Begin Filler Row -->
-<tr>
-<!-- 1st cell at 3% width or left cell -->
-<td align=left valign=top width="3%">&nbsp;
-</td>
-<!-- 2nd cell at 94% width or center cell -->
-<td width="94%" align=center valign=top>
-</td>
-<!-- 3rd cell at 3% width or right cell -->
-<td align=center valign=top width="3%">&nbsp;
-</td>
-</tr>
-<!-- End Filler Row -->
-</table>
-<!-- End Bottom Table Filler Above Bottom URL -->
+
+<!-- Spacing Div Between Tables Begin -->
+<div>
+<br>
+</div>
+<!-- Spacing Div Between Tables End -->
+
+
+
+<!-- Begin Carriage Return space Between Tables -->
+<br>
+<!-- End Carriage Return space Between Tables -->
+
 
 
 <!-- -->
 <!-- Begin ***** Pre Footer Area Table -->
-<table class=blankbottom>
+<table class=urltableandgototop>
 <!-- Begin Row -->
 <tr>
 <!-- 1st cell at 3% width or left cell -->
@@ -312,6 +409,7 @@ Sign the Petition!<br>
 </table>
 <!-- End ***** Pre Footer Area Table -->
 <!-- -->
+
 
 
 <!-- Begin Table GoTo Top Link -->
@@ -361,9 +459,11 @@ Sign the Petition!<br>
 <!-- -->
 
 
+
 <!-- -->
 <!-- Footer Begins Here-->
 <!-- -->
+
 
 
 <!-- Call External Code via div and java script file. Begin -->
